--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GE_0025.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GE_0025.yml
@@ -18,7 +18,7 @@ Dm_GE_0025_Text_015_e: |
   Another of the six sages—the Sage of Time—came to
   visit me, and she set the Gerudo on our destined path.
 Dm_GE_0025_Text_019_c: |
-  So please... He will need your assistance. Lend him
+  So please... She will need your assistance. Lend her
   your power... The Gerudo's control of lightning!
 Dm_GE_0025_Text_008_b: |
   He endured our strongest attacks. Even the lightning
