--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Junior_Azito006.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Assassin_Junior_Azito006.yml
@@ -9,7 +9,7 @@ Talk_02: |
   appointed knight!
   
   She's always getting in our way every
-  chance she gets. The ladies's a real pain.<0 Type='4'/><3 Type='0' Data='0701'/>But not for long. The Yiga is tightening its
+  chance she gets. The lady's a real pain.<0 Type='4'/><3 Type='0' Data='0701'/>But not for long. The Yiga is tightening its
   net all over Hyrule. <5 Type='0'/>I'm sure we'll hear
   news of her death any day now.
   <4 Type='0' Data='0c004c0061007500670068005300'/>Heh heh...<5 Type='0'/> She'll never expect that we're
