--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_HatenoVillage006.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_HatenoVillage006.yml
@@ -113,7 +113,7 @@ near_01: |
   You don't say!
 Talk_16: |
   <3 Type='0' Data='0400'/><4 Type='0' Data='18005300750072007000720069007300650053005f0030003000'/>Look, Amira! Someone who forgot to put
-  on his <0 Type='3' Data='0000'/>Cece-brand <0 Type='3' Data='ffff'/>outfit today!
+  on her <0 Type='3' Data='0000'/>Cece-brand <0 Type='3' Data='ffff'/>outfit today!
 Talk_62: |
   <3 Type='0' Data='0000'/>If your lack of clothes is supposed to be
   some protest against fashion, you're only
