--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis001.yml
@@ -121,8 +121,8 @@ talk0048: |
   If you come visit my shop in <0 Type='3' Data='0000'/>Gerudo Town<0 Type='3' Data='ffff'/>,
   there is <0 Type='3' Data='0000'/>something special<0 Type='3' Data='ffff'/> that I can craft
   for you.
-  <FontSize Value='80'/><3 Type='0' Data='0c01'/>Oh, wait.<5 Type='0'/> She's a unknown vai, so he can't even get into town,
-  huh? <5 Type='0'/>But if he could beat that monster, I bet...
+  <FontSize Value='80'/><3 Type='0' Data='0c01'/>Oh, wait.<5 Type='0'/> She's a outsider, so she can't even get into town,
+  huh? <5 Type='0'/>But if she could beat that monster, I bet...
   
   <FontSize Value='100'/><3 Type='0' Data='0100'/><4 Type='0' Data='16004700720065006500740069006e0067005f0030003100'/>I can feel fate's pull between us. I'm sure
   we'll meet again.
