--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Hateno_NewCostume.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Hateno_NewCostume.yml
@@ -8,13 +8,13 @@ Talk_01: |
   Though the Calamity is over, its scars
   remain. A mountain of problems stands
   before us even as we begin to rebuild.
-  No matter where I go to offer aid, Linkette
+  No matter where I go to offer aid, Rinkuru
   remains at my side—a kindness that has
-  taken a visible toll on his clothing.
+  taken a visible toll on her clothing.
   That's why I've put an order in for a
   <0 Type='3' Data='0000'/>new and improved Champion's Tunic<0 Type='3' Data='ffff'/>,
-  just<0 Type='3' Data='0000'/> <0 Type='3' Data='ffff'/>for him.
-  I just can't wait to see the look on his
-  face when I surprise him with it!<0 Type='4'/>I'll hide it in the <0 Type='3' Data='0000'/>throne room<0 Type='3' Data='ffff'/> so he won't
-  find it until after our investigation.<0 Type='4'/>Even he would never expect that the
+  just<0 Type='3' Data='0000'/> <0 Type='3' Data='ffff'/>for her.
+  I just can't wait to see the look on her
+  face when I surprise her with it!<0 Type='4'/>I'll hide it in the <0 Type='3' Data='0000'/>throne room<0 Type='3' Data='ffff'/> so she won't
+  find it until after our investigation.<0 Type='4'/>Even she would never expect that the
   <0 Type='3' Data='0000'/>torches<0 Type='3' Data='ffff'/> are the key.
